--- a/roles/tower-template/vars/main.yml
+++ b/roles/tower-template/vars/main.yml
@@ -1,2 +1,10 @@
 ---
 # vars file for tower-template
+osp_templates:
+  - { name: osp-base-configure, playbook: osp-base-configure.yml, inventory: 'local-inventory', credential: 'opentlc-key'}
+  - { name: osp-configure, playbook: osp-configure.yml, inventory: 'local-inventory', credential: 'openstack-key'}
+  - { name: osp-provision, playbook: osp-provision.yml, inventory: 'local-inventory', credential: 'openstack-key'}
+  - { name: osp-deploy-3tier, playbook: osp-deploy-3tier.yml, inventory: 'local-inventory', credential: 'openstack-key'}
+  - { name: osp-smoke-test, playbook: osp-smoke-test.yml, inventory: 'local-inventory', credential: 'openstack-key'}
+  - { name: osp-cleanup-instance, playbook: osp-cleanup-instance.yml, inventory: 'local-inventory', credential: 'openstack-key'}
+  - { name: osp-cleanup-resource, playbook: osp-cleanup-resource.yml, inventory: 'local-inventory', credential: 'openstack-key'}
