--- a/roles/tower-template/tasks/main.yml
+++ b/roles/tower-template/tasks/main.yml
@@ -19,8 +19,9 @@
       tower-cli job_template create -n {{ item.name }} --job-type run -i {{ item.inventory }}
       --project ansible-homework --playbook {{ item.playbook }} --credential {{ item.credential }}
       --vault-credential 'ansible-vault-key' --use-fact-cache True --verbosity verbose --become-enabled True
+      -e 'OSP_GUID: {{ OSP_GUID }}'
     with_items:
-      - "{{ aws_templates}}"
+      - "{{ aws_templates }}"
 
   - name: Associate osp-deploy-3tier with osp isolated group
     command: >
