--- a/tower_config.yml
+++ b/tower_config.yml
@@ -54,10 +54,10 @@
     ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
 
   roles:
-#    - tower-setup
+    - tower-setup
     - tower-credential
-#    - tower-project-inventory
-#    - tower-template
+    - tower-project-inventory
+    - tower-template
   tasks:
   - name: launch the osp workflow
     command: >
